TrafficPattern/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: toolkit-gateway-1
  namespace: toolkit
spec:
  selector:
    app: istio-ingressgateway # Default Ingress Gateway Controller
  servers:
    - hosts:
        - '*'
      port:
        name: http2
        number: 80
        protocol: HTTP
